--- a/source_code/index.html
+++ b/source_code/index.html
@@ -13,7 +13,7 @@
 
             <!-- the logo -->
             <a-assets>
-                <img id="dino_logo" src="./assets/dino_logo.jpg" />
+                <img id="dino_logo" src="../assets/dino_logo.jpg" />
             </a-assets>
         
               <a-marker preset="hiro">
@@ -30,12 +30,12 @@
            </a-marker>
 
            <!-- the Nest -->
-            <a-marker type="pattern" url="/..assets/markers/marker02.patt" id="d02">
+            <a-marker type="pattern" url="../assets/markers/marker02.patt" id="d02">
                 <a-entity position="-0.4 -1.5 0" gltf-model="../assets/dino02/scene.gltf" animation-mixer scale="0.3 0.3 0.3"></a-entity>
             </a-marker>
 
             <!-- the Styracosaurus -->
-            <a-marker type="pattern" url="/..assets/markers/marker03.patt" id="d03">
+            <a-marker type="pattern" url="../assets/markers/marker03.patt" id="d03">
                 <a-entity position="0 0 0" gltf-model="../assets/dino03/scene.gltf" animation-mixer scale="0.5 0.5 0.5"></a-entity>
             </a-marker>
 
