--- a/source_code/index.html
+++ b/source_code/index.html
@@ -25,7 +25,7 @@
               </a-marker>
 
            <!-- the Rex -->
-           <a-marker type="pattern" url="../assets/markers/marker01.patt" id="d01">
+           <a-marker type="pattern" url="markers/marker01.patt" id="d01">
                     <a-entity position="0 0 0" gltf-model="../assets/dino01/scene.gltf" animation-mixer scale="1 1 1"></a-entity>
            </a-marker>
 
