--- a/source_code/index.html
+++ b/source_code/index.html
@@ -31,7 +31,7 @@
 
             <!-- the Styracosaurus -->
             <a-marker type="pattern" url="../assets/markers/marker03.patt" id="d03">
-                <a-entity position="0 0 0" gltf-model="../assets/dino03/scene.gltf" animation-mixer scale="0.5 0.5 0.5"></a-entity>
+                <a-entity position="0 0 0" gltf-model="dino03/scene.gltf" animation-mixer scale="0.5 0.5 0.5"></a-entity>
             </a-marker>
 
           <a-entity camera></a-entity>
