--- a/source_code/index.html
+++ b/source_code/index.html
@@ -30,7 +30,7 @@
            </a-marker>
 
             <!-- the Styracosaurus -->
-            <a-marker type="pattern" url="../assets/markers/marker03.patt" id="d03">
+            <a-marker type="pattern" url="markers/marker03.patt" id="d03">
                 <a-entity position="0 0 0" gltf-model="dino03/scene.gltf" animation-mixer scale="0.5 0.5 0.5"></a-entity>
             </a-marker>
 
