--- a/source_code/index.html
+++ b/source_code/index.html
@@ -25,13 +25,13 @@
               </a-marker>
 
            <!-- the Rex -->
-           <a-marker type="pattern" url="markers/marker01.patt" id="d01">
-                    <a-entity position="0 0 0" gltf-model="dino01/scene.gltf" animation-mixer scale="1 1 1"></a-entity>
+           <a-marker type="pattern" url="../markers/marker01.patt" id="d01">
+                    <a-entity position="0 0 0" gltf-model="../dino01/scene.gltf" animation-mixer scale="1 1 1"></a-entity>
            </a-marker>
 
             <!-- the Styracosaurus -->
-            <a-marker type="pattern" url="markers/marker03.patt" id="d03">
-                <a-entity position="0 0 0" gltf-model="dino03/scene.gltf" animation-mixer scale="0.5 0.5 0.5"></a-entity>
+            <a-marker type="pattern" url="../markers/marker03.patt" id="d03">
+                <a-entity position="0 0 0" gltf-model="../dino03/scene.gltf" animation-mixer scale="0.5 0.5 0.5"></a-entity>
             </a-marker>
 
           <a-entity camera></a-entity>
