--- a/source_code/index.html
+++ b/source_code/index.html
@@ -13,7 +13,7 @@
 
             <!-- the logo -->
             <a-assets>
-                <img id="dino_logo" src="../assets/dino_logo.jpg" />
+                <img id="dino_logo" src="../dino_logo.jpg" />
             </a-assets>
         
               <a-marker preset="hiro">
